Updated many functions using the database and changed the way messages are sent.